# ai-orchestrator

./: .abacus.donotdelete  .env.example  .gitignore  MANUAL_SETUP.md  MODELS.md  QUICK_REFERENCE.md  README.dev.md  README.md  README_INSTALL.md  SETUP_SUMMARY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  WORKFLOWS.md  install.sh  pyproject.toml  quick-dev-setup.sh  quick-install.sh  quick-start.sh  requirements.txt  uninstall.sh  update.sh
ai_orchestrator/: __init__.py  cli.py  config.py  orchestrator.py  router.py
ai_orchestrator/execution/: __init__.py  auto_fixer.py  error_detector.py  fix_strategies.py  ios_simulator.py  project_runner.py  project_types.py  test_executor.py  verification_loop.py
ai_orchestrator/models/: __init__.py  anthropic_client.py  base.py  gemini_client.py  moonshot_client.py  openai_client.py
cursor_integration/: .cursorrules  CURSOR_MCP_FIX.md  CURSOR_SETUP.md  DEVELOPMENT_WORKFLOW.md  README.md  cursor-settings.json  diagnose_cursor_mcp.sh  fix_cursor_mcp.sh
cursor_integration/examples/: 01_rest_api.md  02_fullstack_webapp.md  03_code_review.md  04_auto_fix_workflow.md  05_full_development_cycle.md  06_debugging_and_testing.md  README.md
docs/: IOS_DEVELOPMENT.md
macos_app/: README.md
macos_app/AI Orchestrator Manager/: DEVELOPER_GUIDE.md  Package.swift  TROUBLESHOOTING.md  (+1 more)
mcp_server/: README.md  __init__.py  requirements.txt  server.py  start.sh
scripts/: logs.sh  restart-server.sh  start-server.sh  status.sh  stop-server.sh  test-api-connections.py  test-apis.sh
xcode_extension/: .gitignore  Package.swift  README.md
(+75 files in other folders)
